--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     name: "Deploy on Netlify"
     steps:
-      - uses: actions/checkout@v3
-      - uses: jsmrcaga/action-netlify-deploy@v2.1.0
+      - uses: actions/checkout@v4
+      - uses: jsmrcaga/action-netlify-deploy@vmaster
         with:
           NETLIFY_AUTH_TOKEN: ${{ secrets.MY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.MY_SITE_ID }}
